--- a/package.json
+++ b/package.json
@@ -1,48 +1,41 @@
 {
   "name": "black-jack",
-  "version": "5.0.0",
+  "version": "1.0.0",
   "description": "Black Jack",
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.5",
-    "@fortawesome/fontawesome-free-brands": "^5.0.10",
-    "@fortawesome/fontawesome-free-solid": "^5.0.10",
-    "@fortawesome/react-fontawesome": "0.0.18",
-    "es6-promise": "^4.1.1",
+    "es6-promise": "^4.2.5",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.5",
-    "prop-types": "^15.5.10",
+    "lodash": "^4.17.11",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-redux": "^5.0.6",
-    "react-redux-loading-bar": "^2.9.3",
-    "react-table": "^6.8.0",
+    "react-redux": "^5.1.1",
     "redux": "^3.7.2",
-    "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.2.0"
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^6.0.3",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
     "babel-eslint": "^4.1.6",
     "babel-jest": "^21.2.0",
     "babel-jscs": "^2.0.5",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^8.0.5",
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-plugin-transform-react-jsx": "^6.8.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babelify": "^7.3.0",
     "cross-env": "^1.0.7",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.28.11",
     "envify": "^4.1.0",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-15": "^1.0.5",
-    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-15": "^1.3.0",
+    "enzyme-adapter-react-16": "^1.9.1",
     "eslint": "^1.5.0",
     "eslint-plugin-react": "^3.4.2",
-    "express": "^4.13.3",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^0.8.2",
     "html-webpack-plugin": "^1.6.1",
     "jest": "^21.2.1",
@@ -54,18 +47,17 @@
     "react-addons-test-utils": "^0.14.3",
     "react-test-renderer": "^15.6.1",
     "react-transform-hmr": "^1.0.0",
-    "rimraf": "^2.4.3",
+    "rimraf": "^2.6.3",
     "stats-webpack-plugin": "^0.2.1",
     "style-loader": "^0.19.0",
-    "uglify-js": "^3.1.10",
+    "uglify-js": "^3.4.9",
     "uglifyify": "^4.0.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0",
-    "webpack": "^3.8.1",
+    "webpack": "^3.12.0",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.2.0",
-    "webpack-merge": "^4.1.1"
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.2.1"
   },
   "scripts": {
     "start": "node server",
